Discount section overflow fix

--- a/storelocator/static/storelocator/scss/index.scss
+++ b/storelocator/static/storelocator/scss/index.scss
@@ -4,7 +4,7 @@
     position: fixed;
     top: 0;
     width: 100dvw;
-    height: 100dvh;
+    height: 100vh;
     overflow: hidden;
     z-index: -1;
     filter:
@@ -28,7 +28,7 @@
     justify-content: center;
     gap: 2rem;
     width: 100%;
-    height: calc(100dvh - var(--header-height));
+    height: calc(100vh - var(--header-height));
 
     .brand-logo {
         width: 80dvw;
@@ -82,7 +82,7 @@
 
 .main-panel {
     width: 100dvw;
-    min-height: calc(100dvh - var(--header-height));
+    min-height: calc(100vh - var(--header-height));
 }
 
 // ----------------------
@@ -108,7 +108,7 @@
             top: 0;
             left: 0;
             width: 100%;
-            height: calc(100dvh - var(--header-height));
+            height: calc(100vh - var(--header-height));
             background-color: var(--card);
         }
 
@@ -165,7 +165,7 @@
                     &::after {
                         content: '';
                         width: 100%;
-                        height: 0.2dvh;
+                        height: 0.2vh;
                         position: relative;
                         top: 10px;
                         background: linear-gradient(90deg, transparent, var(--accent), transparent);
@@ -203,7 +203,7 @@
                     &::before {
                         content: '';
                         width: 100%;
-                        height: 0.2dvh;
+                        height: 0.2vh;
                         position: relative;
                         bottom: 10px;
                         background: linear-gradient(90deg, transparent, var(--accent), transparent);
@@ -291,7 +291,6 @@
         }
 
         #discounts {
-            padding: 0.5rem 1rem;
 
             .discount-container {
                 display: grid;
