--- a/storelocator/static/storelocator/scss/main.scss
+++ b/storelocator/static/storelocator/scss/main.scss
@@ -149,7 +149,7 @@ body {
 
                 .offcanvas {
                     color: var(--text);
-                    height: 100dvh;
+                    height: 100vh;
                     background-color: var(--header);
                     backdrop-filter: blur(0.5rem);
                     transition: background-color 2s ease, color 2s ease;
@@ -274,7 +274,7 @@ body {
         align-items: center;
         justify-content: center;
         width: 100%;
-        min-height: calc(100dvh - var(--header-height));
+        min-height: calc(100vh - var(--header-height));
 
         /* Breadcrumb Styling */
         .breadcrumbs {
